# YKS_SDK

./: BmsHandler.cpp  BmsHandler.h  CMakeLists.txt  JoyStickHandler.cpp  JoyStickHandler.h  ReadMe.md  SBusReceiver.cpp  SBusReceiver.h  SocketReceiver.cpp  SocketReceiver.h  SocketSender.cpp  SocketSender.h  Z1Legs.cpp  Z1Legs.h  main.cpp
app/: CMakeLists.txt  README.MD  command.cpp  main.cpp  math_ops.c  math_ops.h  motor_control.c  motor_control.h  transmit.cpp  transmit.h
example/: main函数备份  main函数非全局版备份  xsens测试  手柄按键震动  手柄控制电机  手柄控制电机回传数据  手柄震动反馈  控制电机转动  机器人蹲起 z1legs遥杆  获取手柄输入信息  面向对象的手柄控制电机转动
example/Z1_example/: BridgeHW.cpp  BridgeHW.h  LeggedController.cpp  LeggedController.h
example/scripts/: SocketMotorData.py  SocketReceiver.py  SocketSender.py
